# Predicting-Customer-Purchase

./: .gitignore  Purchase_prediction.ipynb  README.md  custom_cv_functions.py  custom_data_imputing.py  custom_neural_network.py  pyproject.toml
custom_modules/: custom_neural_network.py
notebooks/: Purchase_prediction.ipynb
src/purchase_prediction/: __init__.py  config.py  cv.py  data_loader.py  imputation.py
src/purchase_prediction.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
